# cmd

./: .pretierrc.json  Cargo.toml  _cmd  export_autocomplete.sh  hello_world.txt
src/: args.rs  cmd_add.rs  cmd_clear.rs  cmd_config_mem.rs  cmd_csv.rs  cmd_get.rs  cmd_utils.rs  error.rs  input.rs  logging.rs  main.rs  program.rs  tests.rs
src/cmd/: cmd_add.rs  cmd_clear.rs  cmd_delete.rs  cmd_get.rs  mod.rs
src/models/: cmd_record.rs  mod.rs
src/services/: cmd_extension_git.rs  cmd_service.rs  cmd_service_csv.rs  cmd_service_sql.rs  controller.rs  file_manager.rs  input.rs  mod.rs  os_service.rs
src/tests/: all_tests.rs  cmd_git_ext_test.rs  cmd_service_test.rs  mod.rs
src/tests/mocks/: file_manager.rs  mock_opts.rs  mod.rs
src/traits/: cmd_extension.rs  cmd_service.rs  file_manager.rs  inputable.rs  mod.rs  os_service.rs
