[package]
name = "cmd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.19", features = ["derive"] }
csv = "1.1.6"
dialoguer = "0.10.2"
env_logger = "0.9.0"
home = "0.5.3"
log = "0.4.17"
regex = "1.6.0"
serde = {version = "1.0.144", features = ["derive"]}
termcolor = "1.1.3"
