[package]
name = "cmd"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive", "std"] }
csv = "1.1.6"
dialoguer = "0.10.2"
env_logger = "0.9.0"
home = "0.5.3"
log = "0.4.17"
regex = "1.6.0"
serde = {version = "1.0.144", features = ["derive"]}
termcolor = "1.1.3"
mockall = "0.11.2"
thiserror = "1.0.34"
vfs = "0.7.1"
rusqlite = "0.28.0"
derive_builder = "0.11.2"
git2 = "0.15.0"
clap_complete = {version="3.2.5", features=[]}
git = "0.3.0"

[dev-dependencies]


